# robot-hat

./: .gitignore  DESCRIPTION.rst  README.md  i2samp.sh  install.py  pyproject.toml  setup.py
backup/: adc.py  i2samp.sh  pwm copy 2.py  pwm copy.py
docs/: requirements.txt
docs/source/: adc.rst  api.rst  api_adc.rst  api_basic_class.rst  api_i2c.rst  api_modules.rst  api_motor.rst  api_music.rst  api_pwm.rst  api_robot.rst  api_tts.rst  battery.rst  community_tutorials.rst  conf.py  faq.rst  features.rst  fsdgd.py  hardware_introduction.rst  index.rst  install_i2s_for_speaker.rst  installation.rst  motor.rst  music.rst  onboard_mcu.rst  pin.rst  project_control_motor_servo.rst  project_diy_car.rst  project_photoresistor.rst  project_plant_monitor.rst  project_say_something.rst  project_security.rst  project_ultrasonic.rst  projects.rst  pwm.rst  robot.rst  servo.rst  tts.rst  utils.rst
docs/source/api/: adc.rst  api_filedb.rst  api_i2c.rst  api_pin.rst  api_servo.rst  api_tts.rst  api_utils.rst  basic_class.rst  filedb.rst  i2c.rst  index.rst  modules.rst  motor.rst  music.rst  pin.rst  pwm.rst  robot.rst  servo.rst  switch.rst  tts.rst
docs/source/locale/: api.pot  api_adc.pot  api_basic_class.pot  api_filedb.pot  api_i2c.pot  api_modules.pot  api_motor.pot  api_music.pot  api_pin.pot  api_pwm.pot  api_robot.pot  api_servo.pot  api_tts.pot  api_utils.pot  battery.pot  faq.pot  features.pot  hardware_introduction.pot  index.pot  install_i2s_for_speaker.pot  installation.pot  onboard_mcu.pot  project_control_motor_servo.pot  project_diy_car.pot  project_photoresistor.pot  project_plant_monitor.pot  project_say_something.pot  project_security.pot  project_ultrasonic.pot  projects.pot
docs/source/locale/.doctrees/: api.doctree  api_adc.doctree  api_i2c.doctree  (+29 more)
docs/source/project/: community_tutorials.rst  project_diy_car.rst  project_plant_monitor.rst  project_say_something.rst  project_ultrasonic.rst  projects.rst
docs/source/pythonApi/: ADC.rst  I2C.rst  Motor.rst  Music.rst  PWM.rst  Pin.rst  Serial_sound.rst  Servo.rst  Sound.rst  TTS.rst
docs/source/robot_hat_v4/: battery.rst  hardware_introduction.rst  robot_hat_v4.rst
docs/source/robot_hat_v5/: battery.rst  features.rst  hardware_introduction.rst  onboard_mcu.rst  robot_hat_v5.rst
dtoverlays/: sunfounder-robothat5.dtbo  sunfounder-servohat+.dtbo
examples/: led_test.py  llm_deepseek.py  llm_doubao.py  llm_doubao_with_image.py  llm_gemini.py  llm_grok.py  llm_local_with_image.py  llm_ollama.py  llm_ollama_with_image.py  llm_openai.py  llm_openai_with_image.py  llm_others.py  llm_qwen.py  pin_input.py  servo.py  stt_vosk_stream.py  stt_vosk_wake_word.py  stt_vosk_wake_word_thread.py  stt_vosk_without_stream.py  tts_edge.py  tts_espeak.py  tts_openai.py  tts_pico2wave.py  tts_piper.py  ultrasonic.py  voice_assistant.py
robot_hat/: __init__.py  adc.py  audio_player.py  basic.py  config.py  device.py  filedb.py  i2c.py  keyboard_input.py  led.py  llm.py  microphone.py  modules.py  motor.py  music.py  pin.py  pwm.py  pwm_group.py  robot.py  servo.py  speaker.py  spi.py  stt.py  switch.py  tts.py  user_button.py  utils.py  version.py  vilib.py  voice_assistant.py
robot_hat/llm/: __init__.py  llm.py
robot_hat/stt/: __init__.py  openai_stt.py  vosk.py
robot_hat/tts/: __init__.py  espeak.py  openai_tts.py  pico2wave.py  piper.py  piper_models.py  tts_engine.py
tests/: button_event_test.py  init_angles_test.py  line_tracker.py  motor_robothat5_test.py  motor_test.py  servo_hat_test.py  servo_test.py  test_piper_stream.py  test_user_button.py  tone_test.py
tests/robot5-ai-test/: adc_read_test.py  i2c_read_test.py  i2c_write_test.py  pwm_hat5.py  pwm_hat5_test.py  pwm_test.py
(+133 files in other folders)
